--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,3 +18,15 @@ html, body {
 	background-color: #3A4DF9;
 	height: 20vh;
 }
+footer {
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+	background-color: black;
+	color: white;
+	text-align: center;
+	height: 60px;
+	padding:20px;
+
+}
