--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 html {
 	height: 100%;
+	scroll-behavior: smooth;
 }
 body {
 	width: 100%;
@@ -10,7 +11,9 @@ body {
 	left: 0;
 	right: 0;
 	padding-bottom: 60px;
+	overflow-y: scroll;
 }
+
 .navbar {
 	position: fixed;
 	height: 50px;
@@ -27,7 +30,7 @@ header img {
 }
 header nav {
 	position: absolute;
-	top: 0px;
+	top: 10px;
 	left: 0;
 	right: 0;
 	z-index: 2;
@@ -81,6 +84,16 @@ section p {
 }
 .transparentBackground {
 	height: 100%;
+}
+.carousel {
+	border: 10px solid black;
+	margin:10px;
+	background-color: gray;
+	border-radius: 5px;
+}
+.carousel-item img {
+	height: 600px;
+	width: auto;
 }
 i {
 	color: white;
